kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web         # Название нашего объекта Deployment
spec:
  replicas: 1     # Начнем с одного пода
  selector:       # Укажем, какие поды относятся к нашему Deployment:
    matchLabels:  # - это поды с меткой
      app: web    # app и ее значением web
  template:       # Теперь зададим шаблон конфигурации пода
    metadata:
    name: web
    labels:
      app: web
  spec:
    containers:
    - name: web
      image: mikhailgrabovskiy/my_k8s_course:latest
      # --- BEGIN ---
      readinessProbe: # Добавим проверку готовности
        httpGet: # веб-сервера отдавать
          path: /index.html # контент
          port: 8000
      # --- END ---
      livenessProbe:
        tcpSocket: { port: 8000 }
      volumeMounts:
      - name: app
        mountPath: /app
    volumes:
    - name: app
      emptyDir: {}
